Add more error handling
